# plotz

./: CMakeLists.txt  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake
include/plotz/: color_scheme.hpp  heatmap.hpp  magnitude.hpp  plot_traits.hpp  plotz.hpp  png.hpp  qoi.hpp  render_text.hpp  scales.hpp  spectrum.hpp  write_png.hpp
src/: fpng.cpp  heatmap.cpp  magnitude.cpp  main.cpp  render_text.cpp  spectrum.cpp  write_png.cpp
tests/: CMakeLists.txt
tests/plotz_test/: CMakeLists.txt  plotz_test.cpp
